fix: make accordion header text left aligned

--- a/src/app/components/MyAccordion/MyAccordion.scss
+++ b/src/app/components/MyAccordion/MyAccordion.scss
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    text-align: left;
   }
 
   .AccordionContent {
